style(template_maker): review codes and optimize code style (#30)